# openapi/servergen/go/model_error_response.go
@@ -1,0 +1,50 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Crypto Wallet REST API
+ *
+ * REST API for air-gapped crypto wallets. Supports multiple cryptocurrencies with fiat currency conversion, future-proof. 
+ *
+ * API version: 1.0.0
+ */
+
+package cryptowalletrest
+
+
+import (
+	"time"
+)
+
+
+
+type ErrorResponse struct {
+
+	// Error type
+	Error string `json:"error"`
+
+	// Human-readable error message
+	Message string `json:"message"`
+
+	Timestamp time.Time `json:"timestamp"`
+}
+
+// AssertErrorResponseRequired checks if the required fields are not zero-ed
+func AssertErrorResponseRequired(obj ErrorResponse) error {
+	elements := map[string]interface{}{
+		"error": obj.Error,
+		"message": obj.Message,
+		"timestamp": obj.Timestamp,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertErrorResponseConstraints checks if the values respects the defined constraints
+func AssertErrorResponseConstraints(obj ErrorResponse) error {
+	return nil
+}
